@@ -9,6 +9,7 @@
     - fix ipv6 bug in hosts.allow
     - fix using services other than ssh in hosts.allow
     - changed hosts.allow to block adresses on ALL services
+    - hardcode localhost into whitelist
 
 * 1.4rc3    Jan 2009
     - sshguard ignores interrupted fgets() and reloads more seldom (thanks Keven Tipping)
